--- a/docs_config.yml
+++ b/docs_config.yml
@@ -79,8 +79,16 @@ docs_groups:
     - stdlib/float32
     - stdlib/float64
     - stdlib/bigint
-  # TODO: Re-enable when docs are more mature
-  # Language Constructs:
+  # Language Reference:
+  # - reference/introduction
+  # - reference/lexical_structure:
+  #     - reference/lexical_structure/whitespace
+  #     - reference/lexical_structure/comments
+  #     - reference/lexical_structure/keywords
+  #     - reference/lexical_structure/identifiers
+  #     - reference/lexical_structure/literals
+  #     - reference/lexical_structure/operators
+  #     - reference/lexical_structure/delimiters
   #   - constructs/bindings
   #   - constructs/numbers
   #   - constructs/booleans
